# instrument-rs

./: CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  Cargo.toml  PATTERNS_MODULE_SUMMARY.md  README.md  TODO.md  clippy.toml  deny.toml  instrument-rs.toml  instrument-rs.toml.example  rustfmt.toml  test_ast_simple.rs  test_sample.rs
.github/workflows/: ci.yml
docs/: architecture.md  instrumentation_scoring.md
examples/: analyze_file.rs  axum_demo.rs  axum_detection.rs  call_graph_demo.rs  output_formatters.rs  pattern_matching.rs  scoring_demo.rs  simple_output_demo.rs
src/: config.rs  dependencies.rs  dependencies_test.rs  error.rs  lib.rs  main.rs
src/ast/: analyzer.rs  helpers.rs  mod.rs  visitor.rs
src/call_graph/: README.md  builder.rs  edge.rs  graph.rs  mod.rs  node.rs  resolver.rs
src/detector/: endpoint.rs  existing.rs  gaps.rs  mod.rs  priority.rs  rules.rs
src/fixer/: backup.rs  insertion.rs  mod.rs  report.rs  validation.rs
src/framework/: adapter.rs  detector.rs  mod.rs
src/framework/web/: axum.rs  mod.rs  test_standalone.rs
src/instrumentation/: coverage.rs  mod.rs  mutation.rs  transform.rs
src/mutation/: analyzer.rs  generator.rs  mod.rs  runner.rs
src/output/: json.rs  mermaid.rs  mod.rs  test.rs  traits.rs  tree.rs  utils.rs
src/patterns/: README.md  matcher.rs  mod.rs  pattern_set.rs  result.rs  test_standalone.rs
src/reporting/: console.rs  html.rs  json.rs  mod.rs
src/scoring/: analyzer.rs  instrumentation.rs  mod.rs
tests/: README.md  ast_test.rs  call_graph_test.rs  config_parsing_tests.rs  e2e_analysis.rs  e2e_tests.rs  framework_detection.rs  framework_detection_integration.rs  integration_tests.rs  output_format_tests.rs  pattern_matching.rs  performance_tests.rs  verify_integration_tests.rs
tests/common/: mod.rs
