[package]
name = "instrument-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["nwiizo"]
description = "A Rust library for instrumenting code to track test coverage and generate mutation testing reports"
license = "MIT"
repository = "https://github.com/nwiizo/instrument-rs"
keywords = ["testing", "coverage", "mutation-testing", "instrumentation"]
categories = ["development-tools::testing"]

[dependencies]
# AST parsing and manipulation
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# File system and paths
walkdir = "2.5"
glob = "0.3"

# Parallel processing
rayon = "1.10"

# Hashing for fingerprinting
sha2 = "0.10"

# Regular expressions for pattern matching
regex = "1.10"

# Cargo metadata for dependency analysis
cargo_metadata = "0.18"

# Random for mutation selection
rand = "0.8"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Terminal detection for colored output
atty = "0.2"

# Progress bars and terminal UI
indicatif = "0.17"
console = "0.15"

# Colored output
colored = "2.1"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"
tempfile = "3.10"
insta = "1.39"

[[bin]]
name = "instrument-rs"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# Rust 2024 lints configuration
[lints.rust]
# Rust 2024 makes this warn-by-default; explicitly enable for clarity
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
# Core lints only (pedantic has too many false positives)
# all = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }
# Allow some lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# These are acceptable in our statistical calculations
cast_precision_loss = "allow"
# Allow &self on methods that could be functions for API consistency
unused_self = "allow"
# AST visitor patterns can be long
too_many_lines = "allow"
# Allow single match for clarity in AST processing
single_match = "allow"
# AST structs often have many boolean flags
struct_excessive_bools = "allow"
# Explicit closures can be clearer
redundant_closure_for_method_calls = "allow"
# Single char pattern is less readable
single_char_pattern = "allow"
# PathBuf by value is often intentional for ownership
needless_pass_by_value = "allow"
# Explicit lifetimes can be clearer
elidable_lifetime_names = "allow"
# Builder pattern methods returning Self
return_self_not_must_use = "allow"
# Match arms with same values are intentional for clarity
match_same_arms = "allow"
# Doc markdown is too strict
doc_markdown = "allow"
# Trivial copy types by ref is acceptable
trivially_copy_pass_by_ref = "allow"
# Enum variant names can match enum name
enum_variant_names = "allow"
# Result large err is acceptable for error types
result_large_err = "allow"
# Items after statements in module is acceptable
items_after_statements = "allow"
# Map unwrap or is acceptable pattern
map_unwrap_or = "allow"
# PathBuf vs Path argument is acceptable
ptr_arg = "allow"
# Match wildcard single variant is acceptable
match_wildcard_for_single_variants = "allow"
# Collapsible patterns acceptable for readability
collapsible_if = "allow"
collapsible_match = "allow"
collapsible_str_replace = "allow"
# Similar names are acceptable
similar_names = "allow"
# Default trait access is fine
default_trait_access = "allow"
# Unnested or patterns acceptable
unnested_or_patterns = "allow"
# Wildcard imports acceptable
wildcard_imports = "allow"
# Unused async acceptable during development
unused_async = "allow"
# Manual let else acceptable
manual_let_else = "allow"
# Implicit clone acceptable
implicit_clone = "allow"
# Uninlined format args acceptable
uninlined_format_args = "allow"
# Inconsistent struct constructor acceptable
inconsistent_struct_constructor = "allow"
# Cast lossless acceptable
cast_lossless = "allow"
# Consecutive str replace acceptable
# consecutive_str_replace = "allow"  # Removed: unknown lint
# New without default acceptable
new_without_default = "allow"
# Redundant closure acceptable
redundant_closure = "allow"
# Collapsible if let acceptable
# collapsible_if_let = "allow"  # Removed: unknown lint
# Should implement trait acceptable
should_implement_trait = "allow"
# Format push string acceptable
format_push_string = "allow"
# Cloned instead of copied acceptable
cloned_instead_of_copied = "allow"
# Single char add str acceptable
single_char_add_str = "allow"
# Unnecessary wraps acceptable
unnecessary_wraps = "allow"
# Cast possible truncation acceptable
cast_possible_truncation = "allow"
# Cast sign loss acceptable
cast_sign_loss = "allow"
# Single match else acceptable
single_match_else = "allow"